[NAE-2235] Improve Efficiency of Database Reads and Saves - update loggers in PetriNetService - fix cacheable self-invocation in PetriNetService - remove code that is commented out in PetriNetService - fix nullptr exception in PetriNetService.findByImportId - resolve some warnings in PetriNetService